fixing dark mode button

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -197,4 +197,5 @@ body.dark-mode {
 
 body.dark-mode .top-bar {
   background-color: $background-dark !important;
+  color: $text-dark !important;
 }
